Fix capitalization of board name.

--- a/BLE/library.properties
+++ b/BLE/library.properties
@@ -6,4 +6,4 @@ sentence=This library allows you to use a CC2650 BoosterPack for BLE on an MSP43
 paragraph=This library allows you to use a CC2650 BoosterPack for BLE on an MSP432.
 category=Communication
 url=http://energia.nu/
-architectures=MSP432
+architectures=msp432
